Apply review comments